# clearex

./: ._LICENSE.md  .codecov.yml  .gitignore  AGENTS.md  INSTALLATION_NOTES.md  LICENSE.md  README.md  REGISTRATION_REFACTORING_SUMMARY.md  environment.yml  job_10374233.err  job_10374234.err  job_10374235.err  job_10374236.err  job_10374237.err  job_10374373.err  job_10374374.err  job_10374375.err  job_10374376.err  job_10374377.err  job_10374378.err  job_10374579.err  job_10374580.err  job_10374581.err  job_10374582.err  job_10374583.err  job_10374584.err  job_10374585.err  job_10374586.err  job_10374587.err  job_10374588.err  job_10374589.err  job_10374590.err  job_10374640.err  job_10374641.err  job_10374642.err  job_10374643.err  job_10374644.err  job_10374645.err  pyproject.toml  setup.py
.basedpyright/: baseline.json
.github/ISSUE_TEMPLATE/: feature_request.md  issue_report.md
.github/workflows/: docs-publish.yaml  tests.yaml
clearex/context/: environment.py
clearex/file_operations/: dask.py  tools.py
clearex/filter/: filters.py
clearex/fit/: points.py
clearex/plot/: images.py
clearex/preprocess/: pad.py  scale.py
clearex/segmentation/: nerve-segmentation.py  otsu.py  pointsource.py
docs/: AGENTS.md  Makefile  analysis_particle_detection_workflow.md  analysis_particle_detection_workflow.rst  make.bat  zarr_materialization_workflow.md  zarr_materialization_workflow.rst
docs/source/: conf.py  development.md  development.rst  getting-started.md  getting-started.rst  index.md  index.rst
docs/source/api/: index.rst
docs/source/runtime/: architecture-overview.rst  cli-and-execution.rst  dask-backends.rst  index.rst  ingestion-and-canonical-store.rst  module-map.rst  provenance.rst
docs/source/workflows/: analysis-particle-detection.md  analysis-particle-detection.rst  analysis-volume-export.rst  index.md  index.rst  zarr-materialization.md  zarr-materialization.rst
docs/superpowers/plans/: 2026-04-08-volume-export.md  2026-04-10-dask-backend-dialog-layout.md  2026-04-16-fusion-gain-compensation-performance.md  2026-04-27-navigate-stage-geometry.md
docs/superpowers/specs/: 2026-04-08-volume-export-design.md  2026-04-09-dask-dashboard-relay-design.md  2026-04-10-dask-backend-dialog-layout-design.md  2026-04-16-fusion-gain-compensation-performance-design.md
examples/notebooks/: loading_data.ipynb
examples/notebooks/registration/: apply_warp_transform.ipynb  chunked_nonlinear_registration.ipynb  chunked_registration.ipynb  evaluate_histogram_matching.ipynb  image_registration_class.ipynb  nonlinear_registration.ipynb  transform_directory.ipynb
examples/registration/: linear_registration.py  nonlinear_registration.py  transform_image.py
examples/scripts/registration/: chunked_registration.py  image_registration_class.py  linear_registration.py  nonlinear_registration.py  register_round_function.py  transform_image.py
history/: 2025-04-29-v2.yml  2025-04-29.yml
notebooks/registration/: apply_warp_transform.ipynb  nonlinear_registration.ipynb
scripts/: install_petakit_runtime.sh  register_mip_tiles_antspy.py
src/clearex/: AGENTS.md  CODEX.md  __init__.py  codex.md  main.py  workflow.py
src/clearex/context/: environment.py
src/clearex/deconvolution/: __init__.py  petakit.py  pipeline.py
src/clearex/detect/: README.md  __init__.py  particles.py  pipeline.py
src/clearex/file_operations/: dask.py  tools.py
src/clearex/filter/: __init__.py  filters.py  kernels.py
src/clearex/fit/: points.py
src/clearex/flatfield/: README.md  __init__.py  pipeline.py
src/clearex/gui/: CODEX.md  README.md  __init__.py  app.py  dask_dashboard_proxy.py  spacing.py
src/clearex/io/: CODEX.md  README.md  audit.py  cli.py  dask.py  experiment.py  log.py  n5_legacy_helper.py  ome_store.py  provenance.py  read.py  stage_metadata.py  stage_metadata_repair.py  zarr_storage.py
src/clearex/mip_export/: README.md  __init__.py  pipeline.py
src/clearex/plot/: data.py  images.py
src/clearex/preprocess/: pad.py  scale.py
src/clearex/registration/: ._parameters.py  CHUNKED_REGISTRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.py  README.md  __init__.py  chunked.py  common.py  linear.py  nonlinear.py  parameters.py  pipeline.py  tre.py
src/clearex/segmentation/: nerve-segmentation.py  otsu.py  pointsource.py  regions.py  tubes.py
src/clearex/shear/: README.md  __init__.py  pipeline.py
src/clearex/stats/: __init__.py  intensity.py
src/clearex/usegment3d/: __init__.py  pipeline.py
src/clearex/visualization/: CODEX.md  README.md  __init__.py  export.py  napari.py  pipeline.py  (+1 more)
tests/: __init__.py  conftest.py  test_main.py  test_workflow.py
tests/context/: environment.py
tests/deconvolution/: __init__.py  test_petakit.py  test_pipeline.py
tests/detect/: test_pipeline.py
tests/file_operations/: test_tools.py
tests/filter/: __init__.py
tests/flatfield/: test_pipeline.py
tests/gui/: test_dask_dashboard_proxy.py  test_gui_branding.py  test_gui_execution.py
tests/integration/: test_biohpc_workflows.py
tests/io/: test_audit.py  test_cli.py  test_experiment.py  test_log.py  test_n5_legacy_helper.py  test_ome_store_scale.py  test_provenance.py  test_read.py
tests/mip_export/: test_pipeline.py
tests/plot/: .___init__.py
tests/preprocess/: test_scale.py
tests/registration/: test_image_registration.py  test_linear.py  test_pipeline.py
tests/segmentation/: test_pointsource.py
tests/shear/: test_pipeline.py
tests/usegment3d/: test_pipeline.py
tests/visualization/: test_pipeline.py  test_volume_export.py
