[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clearex"
description = "Scalable analytics for cleared and expanded tissue imaging."
authors = [{name = "The Dean Lab, UT Southwestern Medical Center"}]
readme = "README.md"
license = { file = "LICENSE.md" }
version = "0.1.1"

requires-python = ">=3.12"

dependencies = [
    "antspyx",
    "cython>=3.1.4",
    "dask==2025.1.0",
    "dask-image",
    "dask-jobqueue",
    "distributed==2025.1.0",
    "h5py",
    "imagecodecs>=2025.11.11",
    "jupyterlab",
    "matplotlib",
    "napari[all]>0.6.1",
    "nd2",
    "neuroglancer>=2.40.1,<3.0.0",
    "opencv-python",
    "pandas>=2.3.3",
    "pywavelets",
    "scikit-image",
    "scipy",
    "seaborn",
    "tifffile==2025.1.10",
    "zarr<3.0",
]

[project.optional-dependencies]

decon = ["PyPetaKit5D",]

dev = [
    "black>=25.11.0",
    "pre-commit",
    "pytest",
    "pytest-xvfb",
    "pytest-cov",
    "ty>=0.0.1a32",
    "ruff>=0.14.8",
    "pandas-stubs~=2.3.3",
    "scipy-stubs~=1.16.3",
]

docs = [
  "numpydoc",
  "nbconvert",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-copybutton",
  "sphinx-issues",
  "sphinx-design",
  "pyyaml",
  "pydata_sphinx_theme",
  "sphinx-toolbox"
]

[project.urls]
Source = "https://github.com/TheDeanLab/clearex"

[tool.uv]
no-binary-package = ["PyPetaKit5D"]   # Always build from sdist
reinstall-package = ["PyPetaKit5D"] # Similar to --force-reinstall, would run each uv sync

[project.scripts]
clearex = "clearex.main:main"
