[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clearex"
description = "Scalable analytics for cleared and expanded tissue imaging."
authors = [{name = "The Dean Lab, UT Southwestern Medical Center"}]
readme = "README.md"
license = { file = "LICENSE.md" }
version = "0.1.1"

# BaSiCPy currently depends on scipy<1.13, and SciPy 1.12 does not publish
# Python 3.13 wheels. Restrict ClearEx to Python 3.12 until that stack moves.
requires-python = ">=3.12,<3.13"

dependencies = [
    "antspyx",
    "basicpy",
    "bioio-ome-zarr",
    "cython>=3.1.4",
    "dask==2025.1.0",
    "dask-image",
    "dask-jobqueue",
    "distributed==2025.1.0",
    "h5py",
    # u-Segment3D currently requires imagecodecs<2025.
    "imagecodecs>=2024.9.22,<2025",
    "jupyterlab",
    "matplotlib",
    "napari>0.6.1",
    "neuroglancer>=2.40.1,<3.0.0",
    "ome-zarr",
    "ome-zarr-models>=1.6",
    "opencv-python",
    "pandas>=2.3.3",
    "pywavelets",
    "PyQt6>=6.7",
    "scikit-image",
    "scipy<1.13",
    "seaborn",
    "tensorstore",
    "tifffile==2025.1.10",
    "zarr>=3.1.1,<4.0",
]

[project.optional-dependencies]

decon = [
    "PyPetaKit5D",
    "psfmodels @ git+https://github.com/tlambert03/PSFmodels.git",
]

usegment3d = [
    "u-Segment3D>=0.1.4,<0.2",
    "cellpose<3",
]

dev = [
    "black>=25.11.0",
    "pre-commit",
    "pytest",
    "pytest-xvfb",
    "pytest-cov",
    "ty>=0.0.1a32",
    "ruff>=0.14.8",
    "pandas-stubs~=2.3.3",
    "scipy-stubs~=1.16.3",
]

docs = [
  "numpydoc",
  "nbconvert",
  "sphinx<6.0.0",
  "sphinx_rtd_theme",
  "sphinx-copybutton",
  "sphinx-issues",
  "sphinx-design",
  "pyyaml",
  "pydata_sphinx_theme==0.10.0rc2",
  "sphinx-toolbox",
  "mss",
  "codespell",
]

[project.urls]
Source = "https://github.com/TheDeanLab/clearex"

[tool.uv]
no-binary-package = ["PyPetaKit5D"]   # Always build from sdist
reinstall-package = ["PyPetaKit5D"] # Similar to --force-reinstall, would run each uv sync

[project.scripts]
clearex = "clearex.main:main"
